--- a/design/style.less
+++ b/design/style.less
@@ -86,8 +86,8 @@ section {
         line-height: 1.3;
         font-weight: 100;
         a {
-            font-style: italic;
-            font-weight: 400;
+          //  font-style: italic;
+            font-weight: 900;
         }
     }
 }
