--- a/style.css
+++ b/style.css
@@ -1387,6 +1387,18 @@ th {
   padding: 10px;
   font-size: 3em;
 }
+#switch_top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  text-align: right;
+}
+#switch_top #switch-lang {
+  display: inline-block;
+  padding: 0.2em;
+  font-size: 2em;
+}
 .wrap {
   width: 100%;
   max-width: 1380px;
@@ -1395,12 +1407,6 @@ th {
 }
 .wrap.margined {
   margin: 2em auto;
-}
-.wrap #switch-lang {
-  position: fixed;
-  top: 2em;
-  right: 2em;
-  font-size: 2em;
 }
 .frontpage.blog .header {
   display: -webkit-box;
