--- a/less/custom.less
+++ b/less/custom.less
@@ -336,7 +336,7 @@
                     top: 0;right: 0; bottom: 0;left: 0;
                     .bgc;
                     background-size: contain;
-                    background-image: url('img/jcycle1.png');
+                    background-image: url('img/jcycler.png');
                     z-index: 2;
                }
                
