--- a/style.css
+++ b/style.css
@@ -923,7 +923,7 @@ code {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
-  background-image: url('img/jcycle1.png');
+  background-image: url('img/jcycler.png');
   z-index: 2;
 }
 .main-block .main_right .portfolio_block .block.berezka .berezka_txt {
