--- a/less/custom.less
+++ b/less/custom.less
@@ -40,16 +40,13 @@
        flex:0 1 auto;
     
        .fixed_wrap {
-        position: fixed;
+        position: absolute;
         top: 0;left: 0;bottom: 0;
         width: 330px;
 
         display: flex;
         flex-wrap: wrap;
         align-items: stretch;
-
-
-    
 
 
         #switch-lang {
@@ -163,7 +160,6 @@
 
     .main_right {
         flex:3 1 60%;
-
        .fist_block {
             min-height: 100vh;
             width: 100%;
@@ -181,8 +177,27 @@
                 line-height: 1.2;
             }
        } 
+    }
 
-       .portfolio_block {
+
+
+    .max(48em, {
+        flex-wrap: wrap;
+        .main_left {
+            width: 100%;
+            flex:1 0 auto;
+        }
+        .main_right {
+            width: 100%;
+            flex:1 0 auto;
+        }
+    });
+
+ }
+
+
+.portfolio {
+        .portfolio_block {
             min-height: 100vh;
             display: flex;
             align-items: stretch;
@@ -458,22 +473,18 @@
 
        } 
 
-    }
-
     .max(48em, {
-        flex-wrap: wrap;
-        .main_left {
-            width: 100%;
-            flex:1 0 auto;
-        }
-        .main_right {
-            width: 100%;
-            flex:1 0 auto;
-        }
+        position: relative;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+        min-height: 100vh;
+
+        .portrait_block {
+            height: 70vh;
+            align-self: flex-end;
+        }          
     });
-
- }
-
-
-
+}
 
