--- a/less/custom.less
+++ b/less/custom.less
@@ -37,17 +37,17 @@
        background: #F1C21B;
        min-height: 100vh;
        position: relative;
-       flex:0 1 auto;
+       flex:1 1 auto;
     
        .fixed_wrap {
-        position: absolute;
+
+        position: fixed;
         top: 0;left: 0;bottom: 0;
         width: 330px;
 
         display: flex;
         flex-wrap: wrap;
         align-items: stretch;
-
 
         #switch-lang {
             position: absolute;
@@ -61,7 +61,6 @@
                font-style: italic;
             }
         }
-
         .name_block {
            .siderpadding;
             position: relative;
@@ -121,7 +120,6 @@
                 }
             }
         }
-
         .portrait_block {
             position: relative;
             width: 100%;
@@ -154,12 +152,12 @@
         });
 
         }
-       }
+    }
 
-   
 
     .main_right {
         flex:3 1 60%;
+
        .fist_block {
             min-height: 100vh;
             width: 100%;
@@ -179,8 +177,6 @@
        } 
     }
 
-
-
     .max(48em, {
         flex-wrap: wrap;
         .main_left {
@@ -192,12 +188,11 @@
             flex:1 0 auto;
         }
     });
-
  }
 
 
 .portfolio {
-        .portfolio_block {
+    .portfolio_block {
             min-height: 100vh;
             display: flex;
             align-items: stretch;
