--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   font-weight: 100;
   font-stretch: normal;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/notoserifdisplay/v18/buERppa9f8_vkXaZLAgP0G5Wi6QmA1QaeYah2sovLCDq_ZgLyt3idQfktOG-PVpd49gK.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/notoserifdisplay/v24/buERppa9f8_vkXaZLAgP0G5Wi6QmA1QaeYah2sovLCDq_ZgLyt3idQfktOG-PVpd49gK.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Noto Serif Display';
@@ -12,7 +12,7 @@
   font-weight: 300;
   font-stretch: normal;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/notoserifdisplay/v18/buERppa9f8_vkXaZLAgP0G5Wi6QmA1QaeYah2sovLCDq_ZgLyt3idQfktOG-PVoD4tgK.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/notoserifdisplay/v24/buERppa9f8_vkXaZLAgP0G5Wi6QmA1QaeYah2sovLCDq_ZgLyt3idQfktOG-PVoD4tgK.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
@@ -602,10 +602,10 @@ code {
   background: #F1C21B;
   min-height: 100vh;
   position: relative;
-  flex: 0 1 auto;
+  flex: 1 1 auto;
 }
 .main-block .main_left .fixed_wrap {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
