--- a/less/base.less
+++ b/less/base.less
@@ -10,6 +10,7 @@ html, body {
     height: 100%;
     background-color: #ffeaa7;
     overflow-x: hidden;
+  //  overflow-y: scroll;
     width: 100%;
 }
 
