--- a/less/base.less
+++ b/less/base.less
@@ -23,6 +23,7 @@ html, body {
 @serif:'PT Serif', Georgia, 'Times New Roman', Times, serif;
 @mono:'PT Mono', monospace;
 @logo: 'Noto Serif Display', serif;
+@cur: 'Dawning of a New Day', cursive;
 
 
 // @scale: 1.414;
