--- a/less/custom.less
+++ b/less/custom.less
@@ -75,7 +75,6 @@
                 position: relative;
                 font-size: 2em;
                 color: #000;
-
                 a {
                     position: absolute;
                     top: 0;right: 100%;bottom: 0;
@@ -87,6 +86,11 @@
             .titel {
                 font-size: 1.3em;
                 padding: 0.5em 0;
+                // span[lang="en"] a {
+                //     font-family: @cur;
+                //     font-size: 1.2em;
+                //     color: #000;
+                // }
             }
         }
         .social_block {
@@ -175,6 +179,7 @@
                 color: #ffffff;
                 font-size: 2.3em;
                 line-height: 1.2;
+               // font-family: @cur;
             }
        } 
     }
@@ -410,9 +415,10 @@
          }
 
          .teach_titel {
-            font-size: 2.2em;
+            font-size: 2.6em;
             color: #000;
             padding-bottom: 1em;
+            font-family: @cur;
          }
 
          .teach_list {
@@ -420,14 +426,16 @@
             .lectname {
                 font-weight: bold;
                 font-size: 1.2em;
+                
             }
            .lectdescr {
             padding: 1.2em 0;
+            
            }
             .lectdate {
-                font-size: 1em;
+                font-size: 2em;
+                font-family: @cur;
             }
-
             .supervising {
                 position: relative;
                 p {
