--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,6 @@
 // out: ../style.css, compress:false
 
-@import (inline) url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@100;300&family=PT+Sans+Narrow:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import (inline) url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@100;300&family=PT+Sans+Narrow:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Dawning+of+a+New+Day&display=swap');
 
 
 
