--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 @font-face {
+  font-family: 'Dawning of a New Day';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/dawningofanewday/v20/t5t_IQMbOp2SEwuncwLRjMfIg1yYit_nAz8b.ttf) format('truetype');
+}
+@font-face {
   font-family: 'Noto Serif Display';
   font-style: normal;
   font-weight: 100;
@@ -998,9 +1005,10 @@ code {
   padding-bottom: 2em;
 }
 .portfolio .teach_block .teach_titel {
-  font-size: 2.2em;
+  font-size: 2.6em;
   color: #000;
   padding-bottom: 1em;
+  font-family: 'Dawning of a New Day', cursive;
 }
 .portfolio .teach_block .teach_list {
   padding-bottom: 2.2em;
@@ -1013,7 +1021,8 @@ code {
   padding: 1.2em 0;
 }
 .portfolio .teach_block .teach_list .lectdate {
-  font-size: 1em;
+  font-size: 2em;
+  font-family: 'Dawning of a New Day', cursive;
 }
 .portfolio .teach_block .teach_list .supervising {
   position: relative;
